--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -14,10 +14,12 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul *ngIf="visible" class="navbar-nav mt-2 mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link text-light active" href="#">User View </a>
+        <a class="nav-link text-light" [routerLink]="['/user']">User View </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light" href="#">Manager View</a>
+        <a class="nav-link text-light" [routerLink]="['/user', 'manager']"
+          >Manager View</a
+        >
       </li>
     </ul>
   </div>
