added api connection for teams list

--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -135,7 +135,14 @@
       </div>
     </div>
 
-    <table class="table table-borderless table-responsive shadow card-1 p-4">
+    <table
+      class="
+        table table-hover table-borderless table-responsive
+        shadow
+        card-1
+        p-4
+      "
+    >
       <thead>
         <tr class="border-bottom">
           <th><span class="ml-4">Status ID</span></th>
