--- a/src/app/main/teams/teams.component.css
+++ b/src/app/main/teams/teams.component.css
@@ -5,3 +5,23 @@
   margin-right: auto;
   background-color: rgb(252, 252, 252);
 }
+
+.option-btn {
+  border: none;
+  border-radius: 1.5rem;
+  width: 60%;
+  margin-left: 25px;
+  max-width: 120px;
+  max-height: 35px;
+  padding: 5px;
+  font-weight: 600;
+  color: #6c757d;
+  cursor: pointer;
+}
+.option-btn:hover {
+  color: black;
+}
+.add-team-btn {
+  margin-right: 20px;
+  margin-left: auto;
+}
