added add team form

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-md-2 flex justify-content-center">
         <input
-          [routerLink]="['editprofile']"
+          [routerLink]="['edit-profile']"
           type="button"
           class="profile-edit-btn"
           name="btnEditProfile"
