--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -130,7 +130,7 @@
           class="option-btn"
           name="btnAddMore"
           value="Add Status"
-          [routerLink]="['/user', 'addstatus']"
+          [routerLink]="['/user', 'add-status']"
         />
       </div>
     </div>
