--- a/src/app/main/add-team/add-team.component.html
+++ b/src/app/main/add-team/add-team.component.html
@@ -31,13 +31,22 @@
                   <label for="floatingInputShortName">Short Name</label>
                 </div>
                 <div class="form-floating">
+                  <label for="floatingInputShortName">Description</label>
+
                   <textarea
                     name="description"
                     id="floatingInputDescription"
                     cols="30"
                     rows="10"
                   ></textarea>
-
+                </div>
+                <div class="input-group mb-3">
+                  <select class="custom-select" id="inputGroupSelect01">
+                    <option selected>Choose...</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
                   <label for="floatingInputShortName">Description</label>
                 </div>
               </div>
