added api call for add team

--- a/src/app/main/add-team/add-team.component.html
+++ b/src/app/main/add-team/add-team.component.html
@@ -63,7 +63,11 @@
             >
               Cancel
             </button>
-            <button class="btn btn-save fw-bold text-uppercase" type="submit">
+            <button
+              class="btn btn-save fw-bold text-uppercase"
+              type="button"
+              (click)="addTeam()"
+            >
               Save
             </button>
           </div>
