--- a/src/app/main/add-team/add-team.component.html
+++ b/src/app/main/add-team/add-team.component.html
@@ -9,9 +9,9 @@
       <hr />
       <form class="form-card mt-4">
         <div class="row d-flex">
-          <div class="col-8">
+          <div class="col-12">
             <div class="row">
-              <div class="col-8">
+              <div class="col-6">
                 <div class="form-floating">
                   <input
                     type="text"
@@ -30,9 +30,9 @@
                   />
                   <label for="floatingInputShortName">Short Name</label>
                 </div>
-                <div class="form-floating">
-                  <label for="floatingInputShortName">Description</label>
+                <label for="floatingInputShortName">Description -</label>
 
+                <div class="form-floating">
                   <textarea
                     name="description"
                     id="floatingInputDescription"
@@ -40,21 +40,70 @@
                     rows="10"
                   ></textarea>
                 </div>
-                <div class="input-group mb-3">
-                  <select class="custom-select" id="inputGroupSelect01">
-                    <option selected>Choose...</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+              </div>
+              <div class="col-6">
+                <div class="input-group mx-4 mb-3">
+                  <label for="inputStatusFrequency">Status Frequency - </label>
+
+                  <select class="custom-select mx-3" id="inputStatusFrequency">
+                    <option selected>Select</option>
+                    <option value="1">Weekly</option>
+                    <option value="2">Daily</option>
                   </select>
-                  <label for="floatingInputShortName">Description</label>
+                </div>
+                <div ngbDropdown class="d-inline-block mx-4">
+                  <label for="inputStatusFrequency">Manager - </label>
+
+                  <button
+                    type="button"
+                    class="mx-3 custom-select p-2"
+                    id="dropdownForm1"
+                    ngbDropdownToggle
+                  >
+                    Toggle dropdown
+                  </button>
+                  <div ngbDropdownMenu aria-labelledby="dropdownForm1">
+                    <div class="custom-control custom-checkbox">
+                      <input
+                        type="checkbox"
+                        class="checkbox"
+                        id="customCheck1"
+                      />
+
+                      <label class="custom-control-label" for="customCheck1"
+                        >Vivek Sony</label
+                      >
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                      <input
+                        type="checkbox"
+                        class="checkbox"
+                        id="customCheck2"
+                      />
+
+                      <label class="custom-control-label" for="customCheck2"
+                        >Tushar Tambi</label
+                      >
+                    </div>
+                    <div class="custom-control custom-checkbox">
+                      <input
+                        type="checkbox"
+                        class="checkbox"
+                        id="customCheck3"
+                      />
+
+                      <label class="custom-control-label" for="customCheck3"
+                        >Shivam Gaba</label
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="row mt-4">
+        <div class="row mt-2">
           <div id="btn-container" class="col-sm-12">
             <button
               type="button"
