--- a/src/app/main/add-team/add-team.component.html
+++ b/src/app/main/add-team/add-team.component.html
@@ -7,7 +7,11 @@
         </div>
       </div>
       <hr />
-      <form class="form-card mt-4">
+      <form
+        [formGroup]="addTeamForm"
+        (ngSubmit)="onSubmit()"
+        class="form-card mt-4"
+      >
         <div class="row d-flex">
           <div class="col-12">
             <div class="row">
@@ -17,6 +21,7 @@
                     type="text"
                     class="form-control"
                     id="floatingInputTeamName"
+                    formControlName="teamName"
                     placeholder="Team Name"
                   />
                   <label for="floatingInputTeamName ">Team Name</label>
@@ -26,6 +31,7 @@
                     type="text"
                     class="form-control"
                     id="floatingInputShortName"
+                    formControlName="shortName"
                     placeholder="Short Name"
                   />
                   <label for="floatingInputShortName">Short Name</label>
@@ -36,6 +42,7 @@
                   <textarea
                     name="description"
                     id="floatingInputDescription"
+                    formControlName="description"
                     cols="30"
                     rows="10"
                   ></textarea>
@@ -45,58 +52,29 @@
                 <div class="input-group mx-4 mb-3">
                   <label for="inputStatusFrequency">Status Frequency - </label>
 
-                  <select class="custom-select mx-3" id="inputStatusFrequency">
-                    <option selected>Select</option>
+                  <select
+                    formControlName="statusFrequency"
+                    class="custom-select mx-3"
+                    id="inputStatusFrequency"
+                  >
                     <option value="1">Weekly</option>
                     <option value="2">Daily</option>
                   </select>
                 </div>
-                <div ngbDropdown class="d-inline-block mx-4">
-                  <label for="inputStatusFrequency">Manager - </label>
+                <div class="d-flex mx-4">
+                  <label for="inputManagers">Managers - </label>
 
-                  <button
-                    type="button"
-                    class="mx-3 custom-select p-2"
-                    id="dropdownForm1"
-                    ngbDropdownToggle
+                  <ng-select
+                    id="inputManagers"
+                    formControlName="managers"
+                    class="mx-3"
+                    [items]="userList"
+                    bindLabel="name"
+                    placeholder="Select "
+                    appendTo="body"
+                    [multiple]="true"
                   >
-                    Toggle dropdown
-                  </button>
-                  <div ngbDropdownMenu aria-labelledby="dropdownForm1">
-                    <div class="custom-control custom-checkbox">
-                      <input
-                        type="checkbox"
-                        class="checkbox"
-                        id="customCheck1"
-                      />
-
-                      <label class="custom-control-label" for="customCheck1"
-                        >Vivek Sony</label
-                      >
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                      <input
-                        type="checkbox"
-                        class="checkbox"
-                        id="customCheck2"
-                      />
-
-                      <label class="custom-control-label" for="customCheck2"
-                        >Tushar Tambi</label
-                      >
-                    </div>
-                    <div class="custom-control custom-checkbox">
-                      <input
-                        type="checkbox"
-                        class="checkbox"
-                        id="customCheck3"
-                      />
-
-                      <label class="custom-control-label" for="customCheck3"
-                        >Shivam Gaba</label
-                      >
-                    </div>
-                  </div>
+                  </ng-select>
                 </div>
               </div>
             </div>
@@ -112,11 +90,7 @@
             >
               Cancel
             </button>
-            <button
-              class="btn btn-save fw-bold text-uppercase"
-              type="button"
-              (click)="addTeam()"
-            >
+            <button class="btn btn-save fw-bold text-uppercase" type="submit">
               Save
             </button>
           </div>
