--- a/src/app/main/status-list/status-list.component.css
+++ b/src/app/main/status-list/status-list.component.css
@@ -62,6 +62,9 @@ button:focus {
   width: 100%;
   min-width: 300px;
 }
+.px-5 {
+  padding-right: 0 !important;
+}
 .datepicker {
   background-color: #fff;
   border: none;
