--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -154,22 +154,22 @@
       <tbody>
         <tr *ngFor="let status of currentStatusList" class="border-bottom">
           <td>
-            <div class="p-2">
+            <div class="py-2">
               <span class="font-weight-bold">{{ status.status_id }}</span>
             </div>
           </td>
           <td>
-            <div class="p-2">
+            <div class="py-2">
               <span class="font-weight-bold">{{ status.title }}</span>
             </div>
           </td>
           <td>
-            <div class="p-2">
+            <div class="py-2">
               <span class="font-weight-bold">Submitted</span>
             </div>
           </td>
           <td>
-            <div class="p-2">
+            <div class="py-2">
               <span class="font-weight-bold">{{
                 status.submit_time_stamp
               }}</span>
