added active nav link to sidemenu

--- a/src/app/main/side-menu/side-menu.component.css
+++ b/src/app/main/side-menu/side-menu.component.css
@@ -6,3 +6,8 @@ a {
   background: rgb(61, 61, 61);
   color: whitesmoke;
 }
+.active {
+  background: whitesmoke;
+  color: rgb(61, 61, 61);
+  border: none;
+}
