edit profile bug fixes

--- a/src/app/main/edit-profile/edit-profile.component.html
+++ b/src/app/main/edit-profile/edit-profile.component.html
@@ -83,16 +83,16 @@
             </div>
           </div>
           <div class="row">
-            <div id="btn-container" class="col-sm-12">
+            <div class="col-sm-12 d-flex flex-row-reverse">
+              <button class="btn fw-bold text-uppercase" type="submit">
+                Save
+              </button>
               <button
                 type="button"
-                [routerLink]="['']"
-                class="btn btn-save fw-bold text-uppercase"
+                [routerLink]="['/user']"
+                class="btn fw-bold text-uppercase"
               >
                 Cancel
-              </button>
-              <button class="btn btn-save fw-bold text-uppercase" type="submit">
-                Save
               </button>
             </div>
           </div>
