--- a/src/app/main/navbar/navbar.component.css
+++ b/src/app/main/navbar/navbar.component.css
@@ -25,16 +25,16 @@
   background: #ec1e24;
   color: whitesmoke;
 }
-.btn-logout {
+.btn-options {
   padding: 8px 12px 8px;
   background-color: whitesmoke;
   border-radius: 4px;
   font-weight: bold;
   line-height: 20px;
   color: #ec1e24;
-  margin-right: 1%;
+  margin-right: 20px;
 }
-.btn-logout:hover {
+.btn-options:hover {
   border: 1px solid whitesmoke;
   background-color: transparent;
   color: whitesmoke;
