--- a/src/app/main/status-list/status-list.component.css
+++ b/src/app/main/status-list/status-list.component.css
@@ -222,7 +222,9 @@ thead tr:nth-child(3) th {
 .custom-day.faded {
   background-color: rgba(2, 117, 216, 0.5);
 }
-
+tbody tr {
+  cursor: pointer;
+}
 .page-size {
   padding: 5px 10px;
   font-weight: 600;
