--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -152,7 +152,11 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let status of currentStatusList" class="border-bottom">
+        <tr
+          *ngFor="let status of currentStatusList"
+          (click)="onStatusClick($event)"
+          class="border-bottom"
+        >
           <td>
             <div class="py-2 mx-5">
               <span class="font-weight-bold">{{ status.status_id }}</span>
