--- a/src/app/main/status/status.component.html
+++ b/src/app/main/status/status.component.html
@@ -1,1 +1,29 @@
-<p>status works!</p>
+<div class="container-fluid mt-4">
+  <div class="row justify-content-center">
+    <div class="col-lg-11 col-md-11">
+      <div class="row justify-content-center">
+        <div class="col-9">
+          <h2 class="heading h2">{{ status.title }}</h2>
+          <h3 class="heading h6 fw-normal">{{ status.submit_time_stamp }}</h3>
+        </div>
+        <div class="col-3">
+          <p class="heading mt-5">ID : {{ status.status_id }}</p>
+        </div>
+      </div>
+      <hr />
+
+      <div class="row d-flex">
+        <div class="col-8">
+          <div class="row">
+            <div class="col-8"></div>
+          </div>
+          <div></div>
+        </div>
+        <div class="col-4">
+          <label>Leaves Planned:</label>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <app-alert [errorMessage]="alertMessage" *ngIf="showAlert"></app-alert> -->
+</div>
