added teamShortName to member list componen

--- a/src/app/main/status-list/status-list.component.html
+++ b/src/app/main/status-list/status-list.component.html
@@ -154,7 +154,7 @@
       <tbody>
         <tr
           *ngFor="let status of currentStatusList"
-          (click)="onStatusClick($event)"
+          (click)="onStatusClick(status.status_id)"
           class="border-bottom"
         >
           <td>
