--- a/src/app/main/teams/teams.component.html
+++ b/src/app/main/teams/teams.component.html
@@ -26,7 +26,11 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let team of teamsList" class="border-bottom">
+        <tr
+          *ngFor="let team of teamsList"
+          (click)="onTeamClick(team.team_short_name)"
+          class="border-bottom"
+        >
           <td>
             <div class="p-2">
               <span class="font-weight-bold">{{ team.team_name }} </span>
