--- a/src/app/main/member-list/member-list.component.html
+++ b/src/app/main/member-list/member-list.component.html
@@ -123,6 +123,15 @@
                 />
                 <label for="floatingInputFirstName ">Job</label>
               </div>
+              <div class="form-floating mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="floatingInputFirstName"
+                  placeholder="Manager"
+                />
+                <label for="floatingInputFirstName ">Manager</label>
+              </div>
             </div>
             <div class="col-6">
               <div class="form-floating mb-3">
