--- a/src/app/main/add-user/add-user.component.html
+++ b/src/app/main/add-user/add-user.component.html
@@ -1,1 +1,109 @@
-<p>add-user works!</p>
+<form class="form-card">
+  <div class="row justify-content-center">
+    <div class="col-6">
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInputFirstName"
+          placeholder="Username"
+        />
+        <label for="floatingInputFirstName ">Username</label>
+      </div>
+      <div class="form-floating mb-3">
+        <div ngbDropdown class="d-inline-block">
+          <label for="floatingInputMiddleName ">Job : </label>
+
+          <button
+            type="button"
+            class="btn drop-down-btn"
+            id="dropdownBasic1"
+            ngbDropdownToggle
+          >
+            {{ selectedJob }}
+          </button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button
+              type="button"
+              *ngFor="let job of jobPositions"
+              ngbDropdownItem
+              (click)="onJobSelect(job)"
+            >
+              {{ job }}
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="form-floating mb-3">
+        <div ngbDropdown class="d-inline-block">
+          <label for="floatingInputMiddleName ">Manager : </label>
+
+          <button
+            type="button"
+            class="btn drop-down-btn"
+            id="dropdownBasic1"
+            ngbDropdownToggle
+          >
+            {{ selectedManager }}
+          </button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button
+              type="button"
+              *ngFor="let job of jobPositions"
+              ngbDropdownItem
+              (click)="onJobSelect(job)"
+            >
+              {{ job }}
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="form-floating mb-3">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInputMiddleName"
+          placeholder="Email"
+        />
+        <label for="floatingInputMiddleName ">Email</label>
+      </div>
+      <div class="form-floating mb-3">
+        <div ngbDropdown class="d-inline-block">
+          <label for="floatingInputMiddleName ">Team : </label>
+
+          <button
+            type="button"
+            class="btn drop-down-btn"
+            id="dropdownBasic1"
+            ngbDropdownToggle
+          >
+            <span>
+              {{ selectedTeam.team_name }}
+            </span>
+            <span *ngIf="selectedTeam.team_short_name !== ''">
+              ({{ selectedTeam.team_short_name }})
+            </span>
+          </button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button
+              type="button"
+              *ngFor="let team of teams"
+              ngbDropdownItem
+              (click)="onTeamSelect(team)"
+            >
+              {{ team.team_name }}
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12 d-flex flex-row-reverse">
+      <button class="btn fw-bold text-uppercase" type="submit">Save</button>
+    </div>
+  </div>
+</form>
