api connection update for add team

--- a/src/app/main/add-team/add-team.component.html
+++ b/src/app/main/add-team/add-team.component.html
@@ -57,8 +57,28 @@
                     class="custom-select mx-3"
                     id="inputStatusFrequency"
                   >
-                    <option value="1">Weekly</option>
-                    <option value="2">Daily</option>
+                    <option value="weekly">Weekly</option>
+                    <option value="daily">Daily</option>
+                  </select>
+                </div>
+                <div
+                  *ngIf="selectedStatusFrequency === 'weekly'"
+                  class="input-group mx-4 mb-3"
+                >
+                  <label for="inputStatusFrequency">Weekly Status Day - </label>
+
+                  <select
+                    formControlName="weeklyStatusDay"
+                    class="custom-select mx-3"
+                    id="inputStatusFrequency"
+                  >
+                    <option value="Monday">Monday</option>
+                    <option value="Tuesday">Tuesday</option>
+                    <option value="Wednesday">Wednesday</option>
+                    <option value="Thursday">Thursday</option>
+                    <option value="Friday">Friday</option>
+                    <option value="Saturday">Saturday</option>
+                    <option value="Sunday">Sunday</option>
                   </select>
                 </div>
                 <div class="d-flex mx-4">
