add user feature update

--- a/src/app/main/member-list/member-list.component.html
+++ b/src/app/main/member-list/member-list.component.html
@@ -101,7 +101,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <app-add-user></app-add-user>
+        <app-add-user [closeModal]="modal.dismiss"></app-add-user>
       </div>
     </ng-template>
   </div>
