--- a/src/app/main/add-user/add-user.component.html
+++ b/src/app/main/add-user/add-user.component.html
@@ -68,6 +68,13 @@
   <div class="row">
     <div class="col-sm-12 d-flex flex-row-reverse">
       <button class="btn fw-bold text-uppercase" type="submit">Save</button>
+      <button
+        (click)="closeModal()"
+        class="btn fw-bold text-uppercase"
+        type="button"
+      >
+        Cancel
+      </button>
     </div>
   </div>
 </form>
